# tradebot

./: README.md  main.py  pyproject.toml  run_once.py  test_integration.py  test_telegram.py  trades.db
app/: config.py  main.py  schedular.py  scheduler.py
app/analytics/: trade_logger.py
app/core/: constants.py  logger.py  utils.py
app/data/: commodities_feed.py  crypto_feed.py  feed_router.py  forex_feed.py  indices_feed.py
app/engine/: displacement_engine.py  engulfing_engine.py  fvg_engine.py  indicators.py  liquidity_engine.py  market_structure.py  order_block_engine.py  pd_arrays.py  rule_engine.py  scoring_engine.py  session_guard.py  spread_guard.py  trade_gate.py  volatility_guard.py
app/risk/: daily_limits.py  position_sizing.py  risk_manager.py
app/state/: state_manager.py  trade_manager.py
app/telegram/: formatter.py  notifier.py
