[project]
name = "tradebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-binance>=1.0.36",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
    "ta>=0.11.0",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
